--- a/style.css
+++ b/style.css
@@ -164,14 +164,15 @@ input.password {
     margin-right: 6px;
 }
 
-.password-strength {
+.password-tip {
     display: block;
-    /* width: 100%; */
+    width: 100%;
     height: 1em;
-    /* color: #ff7978; */
+    color: #ff7978;
     border-radius: 4px;
     margin: 0.7em 0;
     transition: all 0.8s ease-in;
+    font-size: .9em;
 }
 
 .label {
